add fields for GetShortLinkInfo
