# internal/model/dto.go
@@ -143,10 +143,14 @@ type PublishCollectionResponse struct {
 }
 
 type ShortLinkInfoResponse struct {
-	ID           uuid.UUID `json:"id" example:"06301788-e325-488f-94b5-1711e211b82a"`
-	CollectionID uuid.UUID `json:"collection_id" example:"06301788-e325-488f-94b5-1711e211b82a"`
-	URL          string    `json:"url" example:"https://book-foto-art.ru/s/e325488f-94b5-1711e211b82a"`
-	Token        string    `json:"token" example:"e325488f-94b5-1711e211b82a"`
-	CreatedAt    time.Time `json:"created_at" example:"2025-0715:12:00Z"`
-	ClickCount   uint      `json:"click_count" example:"100"`
+	ID                uuid.UUID `json:"id" example:"06301788-e325-488f-94b5-1711e211b82a"`
+	CollectionID      uuid.UUID `json:"collection_id" example:"06301788-e325-488f-94b5-1711e211b82a"`
+	URL               string    `json:"url" example:"https://book-foto-art.ru/s/e325488f-94b5-1711e211b82a"`
+	Token             string    `json:"token" example:"e325488f-94b5-1711e211b82a"`
+	CreatedAt         time.Time `json:"created_at" example:"2025-0715:12:00Z"`
+	ClickCount        uint      `json:"click_count" example:"100"`
+	Name              string    `json:"name" example:"My Collection"`
+	UserName          string    `json:"username" example:"user1"`
+	CoverURL          string    `json:"cover_url"`
+	CoverThumbnailURL string    `json:"cover_thumbnail_url"`
 }
